# Nexus-Cloud-gaming

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  INSTALLATION.md  PROJECT_SUMMARY.sh  QUICKSTART.sh  README.md  WEB_INTERFACE.md  run.bat  run.sh
src/: main.cpp
src/client/: input_handler.cpp  input_handler.h
src/core/: auth_manager.cpp  auth_manager.h  cloud_storage.cpp  cloud_storage.h
src/server/: game_manager.cpp  game_manager.h  streaming_server.cpp  streaming_server.h
web/: index.html  script.js  styles.css
